--- a/.github/workflows/cicd-2-main-branch.yaml
+++ b/.github/workflows/cicd-2-main-branch.yaml
@@ -86,6 +86,6 @@ jobs:
       id-token: write
     uses: ./.github/workflows/stage-4-deploy.yaml
     with:
-      environments: '["review","dev","prod"]'
+      environments: '["review","dev","preprod","prod"]'
       commit_sha: ${{ github.sha }}
     secrets: inherit
