Update github actions concurrency
In some occasions the delete review app workflow was cancelled as it
conflicted with the main deploy workflow. This is because the GITHUB_REF
on the delete workflow is actually main, as opposed to the PR branch.

Remove the branch reference which is prone to error and use the PR
number instead as it is more deterministic.

--- a/.github/workflows/stage-4-deploy.yaml
+++ b/.github/workflows/stage-4-deploy.yaml
@@ -25,7 +25,8 @@ jobs:
         environment: ${{ fromJson(inputs.environments) }}
       max-parallel: 1
     environment: ${{ matrix.environment }}
-    concurrency: deploy-${{ matrix.environment }}-${{ github.ref }}
+    # Prevent concurrent jobs on the same environment and between deploy and delete workflows
+    concurrency: deploy-${{ matrix.environment }}-${{inputs.pr_number}}
 
     steps:
       - name: Checkout code
