--- a/.github/workflows/cicd-1-pull-request-closed.yaml
+++ b/.github/workflows/cicd-1-pull-request-closed.yaml
@@ -13,7 +13,8 @@ jobs:
       pull-requests: write
     runs-on: ubuntu-latest
     environment: review
-    concurrency: deploy-review-${{ github.ref }}
+    # Prevent concurrent jobs on the same environment and between deploy and delete workflows
+    concurrency: deploy-review-${{ github.event.pull_request.number }}
 
     steps:
       - name: Checkout code
