--- a/.github/workflows/cicd-2-main-branch.yaml
+++ b/.github/workflows/cicd-2-main-branch.yaml
@@ -4,6 +4,9 @@ on:
   push:
     branches: [main]
 
+# Set concurrency at the workflow level to ensure the same commit runs tests and deployment consistently
+concurrency: deploy-workflow-main
+
 jobs:
   metadata:
     name: 'Set CI/CD metadata'
