add cooldown for application dependency updates
Dependabot's cooldown function is a protection against supply chain
attacks. There have been a lot of these recently against npm.

By waiting a week before pulling new package versions, we are much
less likely to be exposed to malicious versions before they are yanked
from the package index.

We may wish to tweak this for particular packages, e.g. if they are
internally authored. We are already excluding nhsuk-frontend from
dependabot so we don't need to worry about that one.

I'm not sure about terraform updates so I've left that alone in this
commit.

--- a/.github/dependabot.yaml
+++ b/.github/dependabot.yaml
@@ -5,7 +5,8 @@ updates:
     directory: '/'
     schedule:
       interval: 'daily'
-
+    cooldown:
+      default-days: 7
     ignore:
       # Manually track LTS release versions (see .tool-versions, package.json
       # and .browserslistrc)
@@ -15,7 +16,8 @@ updates:
     directory: '/'
     schedule:
       interval: 'daily'
-
+    cooldown:
+      default-days: 7
     groups:
       docker:
         patterns:
@@ -25,7 +27,8 @@ updates:
     directory: '/'
     schedule:
       interval: 'daily'
-
+    cooldown:
+      default-days: 7
     ignore:
       # nhsuk-frontend needs to be updated in conjunction with nhsuk-frontend-jinja
       - dependency-name: 'nhsuk-frontend'
@@ -63,7 +66,8 @@ updates:
     directory: '/'
     schedule:
       interval: 'daily'
-
+    cooldown:
+      default-days: 7
     ignore:
       # nhsuk-frontend-jinja needs to be updated in conjunction with nhsuk-frontend
       - dependency-name: nhsuk-frontend-jinja
