--- a/.github/dependabot.yaml
+++ b/.github/dependabot.yaml
@@ -49,7 +49,8 @@ updates:
           - 'eslint'
           - 'eslint-*'
           - 'prettier'
-          - 'typescript'
+          - 'typescript*'
+          - '@types/*'
 
       test:
         patterns:
