--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -17,3 +17,8 @@ repos:
         args: [--fix]
       # Run the formatter.
       - id: ruff-format
+
+  - repo: https://github.com/adamchainz/django-upgrade
+    rev: '1.29.1'
+    hooks:
+      - id: django-upgrade
