Ignore false positives for local development
These keys are not sensitive, as they are used for simulating azure
locally.

--- a/.gitleaksignore
+++ b/.gitleaksignore
@@ -23,3 +23,5 @@ infrastructure/terraform/resource_group_init/storage.bicep:generic-api-key:59
 infrastructure/terraform/resource_group_init/keyVault.bicep:generic-api-key:10
 manage_breast_screening/config/settings_test.py:private-key:34
 manage_breast_screening/config/settings_test.py:public-key:61
+manage_breast_screening/config/.env.tpl:generic-api-key:36
+manage_breast_screening/config/.env.tpl:generic-api-key:42
