--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,7 +4,7 @@
     "MD024": { "siblings_only": true },
     "MD033": false
   },
-  "python.testing.pytestArgs": ["."],
+  "python.testing.pytestArgs": ["--color=yes", "manage_breast_screening"],
   "python.testing.unittestEnabled": false,
   "python.testing.pytestEnabled": true
 }
